--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,24 @@
 // Navigation Styles here
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 2% 5%;
+  width: 90%;
+
+  .links-parent {
+    font-size: 1.7rem;
+    display: flex;
+    justify-content: flex-end;
+    width: 50%;
+    
+    a {
+      text-decoration: none;
+      color: black;
+      padding: 0 2%;
+      
+      
+    }
+  }
+}
+
