--- a/css/index.css
+++ b/css/index.css
@@ -169,9 +169,11 @@ img {
   margin: 0 auto;
 }
 nav {
+  max-width: 800px;
+  width: 100%;
+  margin: 2% auto;
   display: flex;
   justify-content: space-between;
-  margin: 2% 5%;
   width: 90%;
 }
 nav .links-parent {
@@ -183,7 +185,10 @@ nav .links-parent {
 nav .links-parent a {
   text-decoration: none;
   color: black;
-  padding: 0 2%;
+  padding: 0 5%;
+}
+.border {
+  border-bottom: 2px dashed #C0C0C0;
 }
 .footer {
   width: 100%;
@@ -195,6 +200,10 @@ nav .links-parent a {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .heading {
+  padding: 2.5% 0;
+  border-bottom: 2px dashed #C0C0C0;
 }
 .home .content-section {
   margin: 30px 0;
@@ -241,4 +250,16 @@ nav .links-parent a {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  background-color: teal;
+  border-radius: 15px;
+  width: 80%;
+  padding: 6%;
+  text-align: center;
+}
+.home .content-pick .destination .btn a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.7rem;
 }
