--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,9 @@
 .home {
+  
+  .heading {
+    padding: 2.5% 0;
+    border-bottom: 2px dashed @navigation-border;
+  }
 
   .content-section {
     margin: 30px 0;
@@ -56,6 +61,11 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .bttn (teal, white);
+      }
     }
+
   }
 }// home
