--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,15 @@
 // Mixins in here
+
+  .bttn (@bg, @color){
+    background-color: @bg;
+    border-radius: 15px;
+    width: 80%;
+    padding: 6%;
+    text-align: center;
+
+    a {
+      text-decoration: none;
+      color: @color;
+      font-size: 1.7rem;
+    }
+  }
