--- a/css/index.css
+++ b/css/index.css
@@ -171,16 +171,36 @@ img {
 nav {
   max-width: 800px;
   width: 100%;
-  margin: 2% auto;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  padding: 0 0 3% 0;
+}
+@media (max-width: 500px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 500px) {
+  nav h1 {
+    font-size: 2.8rem;
+  }
 }
 nav .links-parent {
   font-size: 1.7rem;
   display: flex;
   justify-content: flex-end;
   width: 50%;
+  align-items: center;
+}
+@media (max-width: 500px) {
+  nav .links-parent {
+    justify-content: space-evenly;
+    width: 100%;
+    padding-top: 3%;
+    font-size: 1.5rem;
+  }
 }
 nav .links-parent a {
   text-decoration: none;
@@ -189,6 +209,11 @@ nav .links-parent a {
 }
 .border {
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .border {
+    margin: 0;
+  }
 }
 .footer {
   width: 100%;
@@ -201,30 +226,61 @@ nav .links-parent a {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home {
+  margin: 0 auto;
+  padding: 4%;
+}
+.home header {
+  margin: 0 auto;
+}
 .home .heading {
   padding: 2.5% 0;
   border-bottom: 2px dashed #C0C0C0;
 }
+@media (max-width: 500px) {
+  .home .heading {
+    padding: 4% 0 2% 0;
+  }
+}
 .home .content-section {
-  margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 5% 0;
+}
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-direction: column;
+  }
 }
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
 }
 .home .inverse-content {
-  padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -236,7 +292,15 @@ nav .links-parent a {
 }
 .home .content-destination {
   width: 75%;
-  margin: 0 auto 30px;
+  padding: 5% 0;
+  margin: 0 auto;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 6% 0;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
@@ -247,9 +311,20 @@ nav .links-parent a {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    padding: 5% 10% 2% 10%;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
-  margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 100%;
+    padding: 3% 0;
+  }
 }
 .home .content-pick .destination .btn {
   background-color: teal;
@@ -262,4 +337,10 @@ nav .links-parent a {
   text-decoration: none;
   color: white;
   font-size: 1.7rem;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    width: 100%;
+    padding: 4%;
+  }
 }
