--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,16 +3,35 @@
 nav {
   max-width: 800px;
   width: 100%;
-  margin: 2% auto;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  padding: 0 0 3% 0;
+
+  @media @phone {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  h1 {
+    @media @phone {
+      font-size: 2.8rem;
+    }
+  }
 
   .links-parent {
     font-size: 1.7rem;
     display: flex;
     justify-content: flex-end;
     width: 50%;
+    align-items: center;
+
+    @media @phone {
+      justify-content: space-evenly;
+      width: 100%;
+      padding-top: 3%;
+      font-size: 1.5rem;
+    }
     
     a {
       text-decoration: none;
@@ -26,4 +45,8 @@ nav {
 
 .border {
   border-bottom: 2px dashed @navigation-border;
+
+  @media @phone {
+    margin:0;
+  }
 }
