--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,7 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+//Breakpoints
+@phone: ~"(max-width: 500px)";
+@desktop: ~"(max-width: 1000px)";
