--- a/less/navigation.less
+++ b/less/navigation.less
@@ -37,8 +37,7 @@ nav {
       text-decoration: none;
       color: black;
       padding: 0 5%;
-      
-      
+      .animation(white, dodgerblue);
     }
   }
 }
